--- a/application/views/scripts/booksonsale/index.phtml
+++ b/application/views/scripts/booksonsale/index.phtml
@@ -109,31 +109,30 @@ $this->headTitle($this->sitemapPage['title']);
             <!--******************************************
                             MAIN BESTSELLERS START
              ******************************************-->
-			<div class="container">
-				<div class="bestsellers clearfix text-center">
-					<h2>Books on Sale</h2>
-					<?php 
-						foreach($this->books as $book) {	
-							?>
-								<div class="books">
-									<figure class="center-block">
-										<a href="<?php echo $this->bookUrl($book);?>"><img src="<?php echo $this->bookImgUrl($book);?>" class="img-responsive"></a>
-										<span class="sale">SALE</span>
-									</figure>
-									<h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
-									<p><span class="by">by</span>
-									<?php foreach($this->authors as $author) {
-										if($author['id'] == $book['author_id']) {
-										echo $author['name'];
-									}}?>
-									</p>
-									<p class="prise center-block"><?php echo $this->escape($book['price']);?><!--<a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a>--></p>
-								</div>
-							<?php
-						}
-					?>
-				</div>
-			</div>
+            <div class="container">
+                <div class="bestsellers clearfix text-center">
+                    <h2>Books on Sale</h2>
+                    <?php 
+                        foreach($this->books as $book) {	
+                            ?>
+                            <div class="books">
+                                    <figure class="center-block">
+                                            <a href="<?php echo $this->bookUrl($book);?>"><img src="<?php echo $this->bookImgUrl($book);?>" class="img-responsive"></a>
+                                            <span class="sale">SALE</span>
+                                    </figure>
+                                    <h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
+                                    <p><span class="by">by</span>
+                                    <?php foreach($this->authors as $author) {
+                                            if($author['id'] == $book['author_id']) {
+                                            echo $author['name'];
+                                    }}?>
+                                    </p>
+                                    <p class="prise center-block"><?php echo $this->escape($book['sale_price']); ?><br><s><?php echo $this->escape($book['price']); ?></s><!--<br><br><a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a>--></p>                            </div>
+                            <?php
+                        }
+                    ?>
+                </div>
+            </div>
 
             <!--******************************************
                              MAIN BESTSELLERS END
